--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "numpy (>=2.2.1,<3.0.0)"
+    "numpy (>=2.2.1,<3.0.0)",
+    "gym (>=0.26.2,<0.27.0)"
 ]
 
 
