--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = [
     {name = "Clément Gambier",email = "78157383+clement-gambier2@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "^3.11"
 dependencies = [
-    "numpy (>=2.2.1,<3.0.0)",
+    "torch (>=2.5.1,<3.0.0)",
+    "torchvision (>=0.20.1,<0.21.0)",
+    "torchaudio (>=2.5.1,<3.0.0)",
     "gym (>=0.26.2,<0.27.0)"
 ]
 
